Update db & migration clean up

--- a/HelpDesk/Helpdesk_Web/index.html
+++ b/HelpDesk/Helpdesk_Web/index.html
@@ -45,6 +45,7 @@
                     <textarea name="description" id="description" rows="5" cols="23"></textarea>
                     <br><br>
                     <button type="submit">Submit</button>
+                    <p class="status"></p>
                 </form>
             </div>
             <div class="HelpdeskForm">
@@ -83,7 +84,7 @@
                     <textarea name="description" id="description" rows="5" cols="23" required></textarea>
                     <br><br>
                     <button type="submit">Submit</button>
-                    <p class="status" style="color:red"></p>
+                    <p class="status"></p>
                 </form>
             </div>
             <div class="HelpdeskForm">
@@ -122,6 +123,7 @@
                     <textarea name="description" id="description" rows="5" cols="23"></textarea>
                     <br><br>
                     <button type="submit">Submit</button>
+                    <p class="status"></p>
                 </form>
             </div>
         </div>
