--- a/HelpDesk/Helpdesk_Web/index.html
+++ b/HelpDesk/Helpdesk_Web/index.html
@@ -14,35 +14,24 @@
                 <form id="ITHelpdeskForm">
                     <label for="type">Type</label>
                     <select id="type" name="type">
-                        <option value="error">Error report</option>
-                        <option value="entrance">Entrance Permission</option>
+                        <option value="fault">Fault report</option>
+                        <option value="account">Account issues</option>
                     </select>
                     <br>
-                    <label for="priority">Priority</label>
-                    <select id="priority" name="priority">
-                        <option value="1">1.Critical</option>
-                        <option value="2">2.High</option>
-                        <option value="3">3.Standard</option>
-                        <option value="4">3.Low</option>
-                    </select>
+                    <label for="product">Product or System</label>
+                    <input type="text" name="product" id="product" required />
                     <br>
                     <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
+                    <input type="text" name="name" id="name" required />
                     <br>
-                    <label for="phone-number">Phone number</label>
-                    <input type="text" name="phone-number" id="phone-number" />
-                    <br>
-                    <label for="room-number">Room number</label>
-                    <input type="text" name="room-number" id="room-number" />
+                    <label for="phoneNumber">Phone number</label>
+                    <input type="text" name="phoneNumber" id="phoneNumber" required />
                     <br>
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" />
-                    <br>
-                    <label for="title">Title</label>
-                    <input type="text" name="title" id="title" />
+                    <input type="email" name="email" id="email" required />
                     <br>
                     <label for="description">Description</label>
-                    <textarea name="description" id="description" rows="5" cols="23"></textarea>
+                    <textarea name="description" id="description" rows="5" cols="23" required ></textarea>
                     <br><br>
                     <button type="submit">Submit</button>
                     <p class="status"></p>
@@ -53,32 +42,29 @@
                 <form id="MaintenanceHelpdeskForm">
                     <label for="type">Type</label>
                     <select id="type" name="type">
-                        <option value="error">Error report</option>
+                        <option value="fault">Fault report</option>
                         <option value="entrance">Entrance Permission</option>
                     </select>
                     <br>
                     <label for="priority">Priority</label>
                     <select id="priority" name="priority">
-                        <option value="1">1.Critical</option>
-                        <option value="2">2.High</option>
-                        <option value="3">3.Standard</option>
-                        <option value="4">3.Low</option>
+                        <option value="1">Critical</option>
+                        <option value="2">High</option>
+                        <option value="3">Standard</option>
+                        <option value="4">Low</option>
                     </select>
                     <br>
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name" required />
                     <br>
-                    <label for="phone-number">Phone number</label>
-                    <input type="string" name="phone-number" id="phone-number" required />
-                    <br>
-                    <label for="room-number">Room number</label>
-                    <input type="number" name="room-number" id="room-number" required />
+                    <label for="phoneNumber">Phone number</label>
+                    <input type="string" name="phoneNumber" id="phoneNumber" required />
                     <br>
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" required />
                     <br>
-                    <label for="title">Title</label>
-                    <input type="text" name="title" id="title" required />
+                    <label for="roomNumber">Room number</label>
+                    <input type="number" name="roomNumber" id="roomNumber" required />
                     <br>
                     <label for="description">Description</label>
                     <textarea name="description" id="description" rows="5" cols="23" required></textarea>
@@ -92,35 +78,28 @@
                 <form id="HRHelpdeskForm">
                     <label for="type">Type</label>
                     <select id="type" name="type">
-                        <option value="error">Error report</option>
-                        <option value="entrance">Entrance Permission</option>
-                    </select>
-                    <br>
-                    <label for="priority">Priority</label>
-                    <select id="priority" name="priority">
-                        <option value="1">1.Critical</option>
-                        <option value="2">2.High</option>
-                        <option value="3">3.Standard</option>
-                        <option value="4">3.Low</option>
+                        <option value="education">Education</option>
+                        <option value="employment">Employment</option>
+                        <option value="enviroment">Work Enviroment</option>
                     </select>
                     <br>
                     <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
+                    <input type="text" name="name" id="name" required />
                     <br>
-                    <label for="phone-number">Phone number</label>
-                    <input type="text" name="phone-number" id="phone-number" />
+                    <label for="employmentNumber">Employment number</label>
+                    <input type="number" name="employmentNumber" id="employmentNumber" required />
                     <br>
-                    <label for="room-number">Room number</label>
-                    <input type="text" name="room-number" id="room-number" />
+                    <label for="phoneNumber">Phone number</label>
+                    <input type="string" name="phoneNumber" id="phoneNumber" required />
                     <br>
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" />
+                    <input type="email" name="email" id="email" required />
                     <br>
-                    <label for="title">Title</label>
-                    <input type="text" name="title" id="title" />
+                    <label for="chief">Chief</label>
+                    <input type="text" name="chief" id="chief" required />
                     <br>
                     <label for="description">Description</label>
-                    <textarea name="description" id="description" rows="5" cols="23"></textarea>
+                    <textarea name="description" id="description" rows="5" cols="23" required ></textarea>
                     <br><br>
                     <button type="submit">Submit</button>
                     <p class="status"></p>
